# sierra

./: CHANGELOG.md  COPYING  Cargo.toml  README.md  README.tpl  build.rs
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: badge.yml  check-platforms.yml  check-targets.yml  check-toolchains.yml  fast-pr-check.yml  lints.yml  readme.yml  release-please.yml  security.yml
demo/: Cargo.toml
demo/src/: main.rs  main.wgsl
license/: APACHE  MIT
proc/: Cargo.toml
proc-demo/: Cargo.toml
proc-demo/src/: lib.rs
proc/src/: binding_flags.rs  flags.rs  format.rs  graphics_pipeline.rs  layout.rs  lib.rs  pipeline_stages.rs  shader_stage.rs  stage.rs  swizzle.rs
proc/src/descriptors/: acceleration_structure.rs  buffer.rs  combined_image_sampler.rs  image.rs  input.rs  instance.rs  layout.rs  mod.rs  parse.rs  sampled_image.rs  sampler.rs  uniform.rs
proc/src/pass/: input.rs  instance.rs  mod.rs  parse.rs
proc/src/pipeline/: input.rs  instance.rs  layout.rs  mod.rs  parse.rs
proc/src/repr/: generate.rs  mod.rs  parse.rs  repr.rs
proc/src/shader/: glsl.rs  mod.rs
src/: accel.rs  access.rs  buffer.rs  cache.rs  dimensions.rs  encode.rs  fence.rs  format.rs  framebuffer.rs  glsl.rs  image.rs  lib.rs  memory.rs  physical.rs  queue.rs  render_pass.rs  sampler.rs  semaphore.rs  shader.rs  stage.rs  surface.rs  swapchain.rs  view.rs
src/backend/: mod.rs
src/backend/vulkan/: access.rs  convert.rs  descriptor.rs  device.rs  encode.rs  epochs.rs  graphics.rs  mod.rs  physical.rs  queue.rs  resources.rs  surface.rs  swapchain.rs  sync.rs
src/descriptor/: buffer.rs  image.rs  layout.rs  mod.rs  sampler.rs  sparse.rs
src/descriptor/binding/: buffer.rs  image.rs  mod.rs  sampler.rs
src/pipeline/: compute.rs  graphics.rs  mod.rs  ray_tracing.rs
src/repr/: array.rs  mat.rs  mod.rs  native.rs  pad.rs  repr.rs  scalar.rs  vec.rs
