[package]
name = "sierra"
version = "0.4.1"
edition = "2018"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sierra"
homepage = "https://github.com/zakarumych/sierra"
repository = "https://github.com/zakarumych/sierra"
readme = "README.md"
description = "Vulkan-lite graphics API"
categories = ["rendering::graphics-api"]
keywords = ["vulkan"]

[features]
serde-1 = ["serde", "serde_bytes", "smallvec/serde", "ordered-float/serde"]

vulkan = ["erupt", "gpu-alloc", "gpu-alloc-erupt", "gpu-descriptor", "gpu-descriptor-erupt", "mtl", "objc", "core-graphics-types", "moltenvk-sys"]

default = ["vulkan"]
proc-verbose-docs = ["sierra-proc/verbose-docs"]

[dependencies]
sierra-proc = { version = "=0.4.0", path = "proc" }
layered-bitset = { version = "0.1.0" }
bitflags = "1.2"
raw-window-handle = "0.4"
serde = { version = "1.0", optional = true, features = ["derive", "rc"] }
serde_bytes = { version = "0.11", optional = true }
smallvec = { version = "1.5", features = ["const_new"] }
thiserror = "1.0"
tracing = "0.1"
ordered-float = "2.0"
bytemuck = "1.4"
erupt = { version = "0.22", optional = true, features = ["loading"] }
gpu-alloc = { version = "0.5", optional = true, features = ["tracing"] }
gpu-descriptor = { version = "0.2", optional = true, features = ["tracing"] }

gpu-alloc-erupt = { version = "0.7", optional = true }
gpu-descriptor-erupt = { version = "0.3", optional = true, features = ["tracing"] }

#wgpu = { version = "0.10", optional = true }

slab = "0.4"
libloading = "0.7"
scoped-arena = { version = "0.4", features = ["alloc"] }
parking_lot = "0.12"
once_cell = "1.5"
naga = { version = "0.8", features = ["glsl-in", "wgsl-in", "spv-out"] }
arrayvec = "0.7"
codespan-reporting = "0.11"

[target.'cfg(any(target_os="macos", target_os="ios"))'.dependencies]
mtl = { package = "metal", version = "0.23.1", optional = true }
objc = { version = "0.2.5", optional = true }
core-graphics-types = { version = "0.1", optional = true }
moltenvk-sys = { version = "0.1", optional = true }

[workspace]
members = ["demo"]
