[package]
name = "sierra"
version = "0.6.0"
edition = "2021"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sierra"
homepage = "https://github.com/zakarumych/sierra"
repository = "https://github.com/zakarumych/sierra"
readme = "README.md"
description = "Vulkan-lite graphics API"
categories = ["rendering::graphics-api"]
keywords = ["vulkan"]

[features]
serde-1 = ["serde", "serde_bytes", "smallvec/serde"]

vulkan = ["erupt", "gpu-alloc", "gpu-alloc-erupt", "gpu-descriptor", "gpu-descriptor-erupt", "mtl", "objc", "core-graphics-types", "moltenvk-sys"]

default = ["vulkan"]

proc-verbose-docs = ["sierra-proc/verbose-docs"]
glsl = ["naga/glsl-in", "codespan-reporting"]
wgsl = ["naga/wgsl-in", "codespan-reporting"]

[dependencies]
sierra-proc = { version = "=0.6.0", path = "proc" }
bitflags = "1.2"
raw-window-handle = "0.5"
serde = { version = "1.0", optional = true, features = ["derive", "rc"] }
serde_bytes = { version = "0.11", optional = true }
smallvec = { version = "1.5", features = ["const_new"] }
thiserror = "1.0"
bytemuck = { version = "1.4", features = ["derive", "min_const_generics"] }
erupt = { version = "0.23", optional = true, features = ["loading"] }
gpu-alloc = { version = "0.5", optional = true }
gpu-descriptor = { version = "0.2", optional = true }
gpu-alloc-erupt = { version = "0.8", optional = true }
gpu-descriptor-erupt = { version = "0.4", optional = true }
slab = "0.4"
scoped-arena = { version = "0.4", features = ["alloc"] }
parking_lot = "0.12"
once_cell = "1.5"
naga = { version = "0.11", optional = true, features = ["spv-out"] }
arrayvec = "0.7"
codespan-reporting = { version = "0.11", optional = true }
array-fu = "0.0.1-alpha"
tracing = { version = "0.1", optional = true }
bitsetium = "0.0.2"
hashbrown = "0.13"
num-traits = "0.2"

[target.'cfg(any(target_os="macos", target_os="ios"))'.dependencies]
mtl = { package = "metal", version = "0.24", optional = true }
objc = { version = "0.2.5", optional = true }
core-graphics-types = { version = "0.1", optional = true }
moltenvk-sys = { version = "0.1", optional = true }

[workspace]
members = ["demo"]
