[package]
name = "sierra-proc-demo"
version = "0.3.0"
authors = ["Zakarum <zakarumych@ya.ru>"]
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sierra-proc-demo/0.1.0"
homepage = "https://github.com/zakarumych/sierra"
repository = "https://github.com/zakarumych/sierra"
description = "Demonstrates sierra's code generation abilities"

[dependencies]
sierra = { version = "=0.6.0", path = "..", features = ["proc-verbose-docs", "wgsl", "tracing"] }
scoped-arena = "0.4"
eyre = "0.6"
color-eyre = "0.6"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
winit = "0.28"
