[package]
name = "sierra-proc-demo"
version = "0.1.0"
authors = ["Zakarum <zakarumych@ya.ru>"]
edition = "2018"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sierra-proc-demo/0.1.0"
homepage = "https://github.com/zaq/sierra"
repository = "https://github.com/zaq/sierra"
description = "Demonstrates sierra's code generation abilities"

[dependencies]
sierra = { version = "0.1.0", path = ".." }
sierra-proc = { version = "0.1.0", path = "../proc", features = ["verbose-docs"] }
bumpalo = "3.6"