[package]
name = "sierra-proc"
version = "0.4.0"
authors = ["Zakarum <zakarumych@ya.ru>"]
edition = "2018"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sierra-proc/0.1.0"
homepage = "https://github.com/zakarumych/sierra"
repository = "https://github.com/zakarumych/sierra"
readme = "../README.md"
description = "Procedural macros for 'sierra' crate"

[lib]
proc-macro = true

[features]
# do not hide generated types in docs
verbose-docs = []

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
